--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="info.wwwood.intentspractice.presentationlayer.controllers.activities.MainActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/main_editText"
+        android:text="Web"
+        android:id="@+id/main_btWeb"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
-        android:text="Hola" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mundo"
-        android:id="@+id/main_tvTexto"
-        android:layout_marginTop="49dp"
-        android:textSize="60px"
-        android:layout_below="@+id/main_editText"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_marginTop="50dp" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ok"
-        android:id="@+id/main_btAsignar"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp" />
+        android:text="GPS"
+        android:id="@+id/main_btGPS"
+        android:layout_marginTop="42dp"
+        android:layout_below="@+id/main_btWeb"
+        android:layout_alignStart="@+id/main_btWeb" />
 
 </RelativeLayout>
